Cleaned up a bunch of code. Added java docs, refined simulate method and it's output.